--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "version": "0.1.2",
+  "version": "0.1.3",
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "files": [
     "dist",
-    "src"
+    "src",
+    "font.png"
   ],
   "engines": {
     "node": ">=10"
   },
   "scripts": {
+    "postinstall": "mkdir $INIT_CWD/assets/vendors && mkdir $INIT_CWD/assets/vendors/messages && cp font.png $INIT_CWD/assets/vendors/messages/",
     "start": "tsdx watch",
     "build": "tsdx build",
     "test": "tsdx test",
