--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.1.3",
+  "version": "0.1.4",
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -12,7 +12,7 @@
     "node": ">=10"
   },
   "scripts": {
-    "postinstall": "mkdir $INIT_CWD/assets/vendors && mkdir $INIT_CWD/assets/vendors/messages && cp font.png $INIT_CWD/assets/vendors/messages/",
+    "postinstall": "mkdir -p $INIT_CWD/assets/vendors/messages && cp font.png $INIT_CWD/assets/vendors/messages/",
     "start": "tsdx watch",
     "build": "tsdx build",
     "test": "tsdx test",
